Fixed welcome message, and some layout issues

--- a/CSS/about_css.css
+++ b/CSS/about_css.css
@@ -21,7 +21,7 @@ body{
   padding: 0px 0px 0px 50px;
 }
 
-p{
+.pWhite{
   color: white;
   padding: 0px 70px 0px 70px;
   font-size: 25px;
